Fix table of contents text alignment

--- a/src/components/ContentList/ContentList.css
+++ b/src/components/ContentList/ContentList.css
@@ -1,3 +1,3 @@
-* {
+.list-page {
   text-align: center;
 }
